// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<EksternLenke/> > skal ikke padde href med protokoll, http 1`] = `
<body>
  <div>
    <a
      class="navds-link navds-link--action"
      href="http://nav.no"
    >
      http://nav.no
      <svg
        height="14px"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          id="ikon_external_link"
        >
          <g
            id="LINE/interface/-external-link"
            stroke="#0067C5"
            transform="translate(2 2)"
          >
            <g
              id="external-link"
            >
              <path
                d="M10,7.07712912 L10,8.33333333 C10,9.25380792 9.25380792,10 8.33333333,10 L1.66666667,10 C0.746192084,10 0,9.25380792 0,8.33333333 L0,1.66666667 C0,0.746192084 0.746192084,0 1.66666667,0 L2.94199316,0"
                id="Rectangle-6"
              />
              <g
                id="Group-7"
                transform="translate(4)"
              >
                <path
                  d="M0,6 L6,0"
                  id="Line-6"
                />
                <polyline
                  id="Path-2"
                  points="2.00719286 0 6 0 6 4.06130668"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </a>
  </div>
</body>
`;

exports[`<EksternLenke/> > skal ikke padde href med protokoll, https 1`] = `
<body>
  <div>
    <a
      class="navds-link navds-link--action"
      href="https://nav.no"
    >
      https://nav.no
      <svg
        height="14px"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          id="ikon_external_link"
        >
          <g
            id="LINE/interface/-external-link"
            stroke="#0067C5"
            transform="translate(2 2)"
          >
            <g
              id="external-link"
            >
              <path
                d="M10,7.07712912 L10,8.33333333 C10,9.25380792 9.25380792,10 8.33333333,10 L1.66666667,10 C0.746192084,10 0,9.25380792 0,8.33333333 L0,1.66666667 C0,0.746192084 0.746192084,0 1.66666667,0 L2.94199316,0"
                id="Rectangle-6"
              />
              <g
                id="Group-7"
                transform="translate(4)"
              >
                <path
                  d="M0,6 L6,0"
                  id="Line-6"
                />
                <polyline
                  id="Path-2"
                  points="2.00719286 0 6 0 6 4.06130668"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </a>
  </div>
</body>
`;

exports[`<EksternLenke/> > skal padde href med protokoll når det mangler 1`] = `
<body>
  <div>
    <a
      class="navds-link navds-link--action"
      href="http://nav.no"
    >
      nav.no
      <svg
        height="14px"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          id="ikon_external_link"
        >
          <g
            id="LINE/interface/-external-link"
            stroke="#0067C5"
            transform="translate(2 2)"
          >
            <g
              id="external-link"
            >
              <path
                d="M10,7.07712912 L10,8.33333333 C10,9.25380792 9.25380792,10 8.33333333,10 L1.66666667,10 C0.746192084,10 0,9.25380792 0,8.33333333 L0,1.66666667 C0,0.746192084 0.746192084,0 1.66666667,0 L2.94199316,0"
                id="Rectangle-6"
              />
              <g
                id="Group-7"
                transform="translate(4)"
              >
                <path
                  d="M0,6 L6,0"
                  id="Line-6"
                />
                <polyline
                  id="Path-2"
                  points="2.00719286 0 6 0 6 4.06130668"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </a>
  </div>
</body>
`;

exports[`<EksternLenke/> > skal padde href med protokoll når det mangler, www 1`] = `
<body>
  <div>
    <a
      class="navds-link navds-link--action"
      href="http://www.nav.no"
    >
      www.nav.no
      <svg
        height="14px"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          id="ikon_external_link"
        >
          <g
            id="LINE/interface/-external-link"
            stroke="#0067C5"
            transform="translate(2 2)"
          >
            <g
              id="external-link"
            >
              <path
                d="M10,7.07712912 L10,8.33333333 C10,9.25380792 9.25380792,10 8.33333333,10 L1.66666667,10 C0.746192084,10 0,9.25380792 0,8.33333333 L0,1.66666667 C0,0.746192084 0.746192084,0 1.66666667,0 L2.94199316,0"
                id="Rectangle-6"
              />
              <g
                id="Group-7"
                transform="translate(4)"
              >
                <path
                  d="M0,6 L6,0"
                  id="Line-6"
                />
                <polyline
                  id="Path-2"
                  points="2.00719286 0 6 0 6 4.06130668"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </a>
  </div>
</body>
`;
